# Meeting-Scheduler

./: .gitignore  README.md
c-server/: .env  CMakeLists.txt  db.c  main.c
c-server/db/: db.h  db_core.c  db_env.c  db_meeting.c  db_slot.c  db_user.c  db_utils.c
c-server/handler/: handler.c  handler.h  handler_auth.c  handler_meeting.c  handler_slot.c
c-server/net/: net.h  net_server.c
c-server/protocol/: protocol.h  protocol_parser.c  protocol_response.c
c-server/session/: session.h  session_manager.c
document/srs/: 01_Gioi_Thieu.md  02_Kien_Truc_He_Thong.md  03_Yeu_Cau_Chuc_Nang.md  04_Co_So_Du_Lieu.md  05_Giao_Thuc_Ban_Tin.md
electron-dashboard/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
electron-dashboard/electron/: main.js
electron-dashboard/src/: App.tsx
